@@ -139,6 +139,7 @@
 * Change runtime termination order to first terminate low priority tasks then medium priority tasks and finally high priority tasks
 * Changes below here added in 4.0.0-beta.15
 * Upgrade Jetty to 9.4.41.v20210516
+* Add new event type STATE_CHANGE to DaoEventType
 
 *Version 3.7.4*
 * Improve work item failure logging
